--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <header>
     <h1>Expedition</h1>
+    <h2>test</h2>
 	 <!-- start of new content -->
 	<aside>
 		<h2>About Me !!!!!!!!</h2>
