--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <a class="social-link" href="https://plus.google.com/+Udacity">
             <img src="img/social-google.png" alt="Google Plus">
         </a>
+		 <a class="test" href="https://plus.google.com/+Udacity">
+            <img src="img/social-google.png" alt="Google Plus">
+        </a>
     </section>
     <!-- end of new content -->
 </footer>
