--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
 <header>
+
     <h1>Expedition</h1>
+
     <h2>test</h2>
+
 	 <!-- start of new content -->
 	<aside>
 		<h2>About Me !!!!!!!!</h2>
@@ -18,8 +21,31 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, debitis earum molestias veniam suscipit aliquam totam exercitationem tempore neque vitae. Minima, corporis pariatur facere at quo porro beatae similique! Odit.</p>
 	</aside>
 	<!-- end of new content -->
+
 	
 </header>
+<footer>
+    <!-- start of new content -->
+    <section>
+        <h3 class="visuallyhidden">Social Links</h3>
+        <a class="social-link" href="https://twitter.com/udacity">
+            <img src="img/social-twitter.png" alt="Twitter">
+        </a>
+        <a class="social-link" href="https://www.instagram.com/udacity/">
+            <img src="img/social-instagram.png" alt="Instagram">
+        </a>
+        <a class="social-link" href="https://plus.google.com/+Udacity">
+            <img src="img/social-google.png" alt="Google Plus">
+        </a>
+		 <a class="test" href="https://plus.google.com/+Udacity">
+            <img src="img/social-google.png" alt="Google Plus">
+        </a>
+		 <a class="test2" href="https://plus.google.com/+Udacity">
+            <img src="img/social-google.png" alt="Google Plus">
+        </a>
+    </section>
+    <!-- end of new content -->
+</footer>
     <script src="js/app.js"></script>
 </body>
 </html>
