--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 </header>
 
 <footer>
+	
+	AYADI dit : AZUL A NOUREDDINE
     <!-- start of new content -->
     <section>
         <h3 class="visuallyhidden">Social Links</h3>
